--- a/app/src/main/res/layout/activity_pet_name.xml
+++ b/app/src/main/res/layout/activity_pet_name.xml
@@ -19,6 +19,7 @@
             android:focusable="true"
             android:paddingTop="6dp"
             android:paddingBottom="6dp"
+            android:visibility="invisible"
             android:src="@drawable/ic_register_later"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,6 +35,7 @@
             android:layout_marginTop="32dp"
             android:contentDescription="아이 이름 입력 타이틀"
             android:src="@drawable/enter_pet_name_label"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/progressContainer" />
