--- a/app/src/main/res/layout/activity_loading_genetic.xml
+++ b/app/src/main/res/layout/activity_loading_genetic.xml
@@ -7,7 +7,7 @@
     android:background="@color/white">
 
     <ImageView
-        android:id="@+id/frameImage"
+        android:id="@+id/iv_frame"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
@@ -21,15 +21,15 @@
         app:layout_constraintVertical_bias="0.34" />
 
     <TextView
-        android:id="@+id/travelText"
+        android:id="@+id/tv_processing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="과거로 여행 중입니다"
         android:textSize="30sp"
         android:textStyle="normal"
         android:textColor="#000000"
-        app:layout_constraintTop_toTopOf="@id/frameImage"
-        app:layout_constraintBottom_toBottomOf="@id/frameImage"
+        app:layout_constraintTop_toTopOf="@id/iv_frame"
+        app:layout_constraintBottom_toBottomOf="@id/iv_frame"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
